oscen-macros/tests/ui/two_sample_rate_fields.rs
use oscen::{Node, SampleRate};

#[derive(Debug, Node)]
struct TwoRates {
    a: SampleRate,
    b: SampleRate,
}

fn main() {}
